--- a/assets/templates/metro_hyip/css/main.css
+++ b/assets/templates/metro_hyip/css/main.css
@@ -7586,3 +7586,104 @@ select option {
     
     padding: 15px 30px;
 }
+/* dashboard section css start */
+.d-widget {
+	padding: 20px;
+	background-color: hsl(var(--base));
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
+}
+
+.d-widget .icon {
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	background-color: #0d0b32;
+	color: hsl(0deg 0% 97.32%);
+	font-size: 32px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-ms-border-radius: 5px;
+	-o-border-radius: 5px;
+}
+
+.d-widget .amount {
+	color: hsl(var(--base));
+	line-height: 1;
+}
+
+.d-widget .caption {
+	font-size: 14px;
+	color: var(--second_color);
+	font-weight: 600;
+}
+
+.d-widget.color--two {
+	background-color: #309eff;
+}
+
+.d-widget.color--two .icon {
+	color: #309eff;
+}
+
+.d-widget.color--two .amount {
+	color: #309eff;
+}
+
+.d-widget.color--three {
+	background-color: #52c889;
+}
+
+.d-widget.color--three .icon {
+	color: #52c889;
+}
+
+.d-widget.color--three .amount {
+	color: #52c889;
+}
+
+.d-widget.color--four {
+	background-color: #ff9800;
+}
+
+.d-widget.color--four .icon {
+	color: #ff9800;
+}
+
+.d-widget.color--four .amount {
+	color: #ff9800;
+}
+
+.d-widget.color--five {
+	background-color: #00bcd4;
+}
+
+.d-widget.color--five .icon {
+	color: #00bcd4;
+}
+
+.d-widget.color--five .amount {
+	color: #00bcd4;
+}
+
+.d-widget.color--six {
+	background-color: #18dab2;
+}
+
+.d-widget.color--six .icon {
+	color: #18dab2;
+}
+
+.d-widget.color--six .amount {
+	color: #10163a;
+}
+
+.mb-30 {
+    margin-bottom: 30px;
+}
+/* dashboard section css end */
