--- a/assets/templates/metro_hyip/css/main.css
+++ b/assets/templates/metro_hyip/css/main.css
@@ -5177,12 +5177,14 @@ select option {
 /* =========================== Banner Section End Here ========================= */
 /* ===========================train section start here=========================== */
 .train-section {
-    width: 100%;
-    height: 75px;
-    position: relative;
     z-index: 555;
-    margin-top: -70px;
     overflow: hidden;
+    position: absolute;
+    width: 112%;
+    height: 187px;
+    transform: rotateZ(21deg);
+    top: 200px;
+    left: -74px;
 }
 
 .train-wrapper {
@@ -5194,22 +5196,17 @@ select option {
     animation: train-move 12s linear infinite;
     animation-delay: 1s;
 }
+.imgnave{
+        transform: rotateZ(-48deg);
+        width: 100px;
+        opacity: 0.8;
+}
 
 .train {
     position: relative;
 }
+body{overflow-x: hidden;}
 
-.train::before {
-    content: "";
-    position: absolute;
-    width: 160px;
-    height: 28px;
-    bottom: -2px;
-    left: -158px;
-    background: url(../../metro_hyip/images/shapes/train-light.png) no-repeat center;
-    background-size: 160px;
-    animation: 0.5s train-light ease-in-out infinite;
-}
 
 .railway {
     width: 100%;
